--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -23,7 +23,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Mini Vocabulary v1.0 beta</string>
+   <string>Mini Vocabulary v1.1</string>
   </property>
   <property name="windowIcon">
    <iconset resource="resources.qrc">
